olympus/n8n/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.ramoneees.com`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: wildcard-ramoneees-com-tls
